RESOLVED FIXED81150
WebProcess sometimes hits an assertion in SandboxExtensionTracker::didCommitProvisionalLoad after running regression tests
https://bugs.webkit.org/show_bug.cgi?id=81150
Summary WebProcess sometimes hits an assertion in SandboxExtensionTracker::didCommitP...
Alexey Proskuryakov
Reported 2012-03-14 13:35:03 PDT
We're seeing an assertion failure in SandboxExtensionTracker::didCommitProvisionalLoad: ASSERT(!m_pendingProvisionalSandboxExtension); <rdar://problem/11002254>
Attachments
proposed fix (2.58 KB, patch)
2012-03-14 13:51 PDT, Alexey Proskuryakov
andersca: review+
Alexey Proskuryakov
Comment 1 2012-03-14 13:51:14 PDT
Created attachment 131914 [details] proposed fix
Alexey Proskuryakov
Comment 2 2012-03-14 14:00:15 PDT
Note You need to log in before you can comment on or make changes to this bug.