        WebProcess sometimes hits an assertion in SandboxExtensionTracker::didCommitProvisionalLoad after running regression tests         https://bugs.webkit.org/show_bug.cgi?id=81150         <rdar://problem/11002254>

Reviewed by Anders Carlsson.

        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::SandboxExtensionTracker::didCommitProvisionalLoad):
        (WebKit::WebPage::SandboxExtensionTracker::didFailProvisionalLoad):
        It's not great, but for now we need to handle this case. Hopefully, some day we'll make
        both WebKit2 processes better aware of what's going on with loading in WebCore.



Canonical link: https://commits.webkit.org/98312@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110743 268f45cc-cd09-0410-ab3c-d52691b4dbfc